--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "i18next": "^21.6.10",
     "react": "17.0.2",
+    "react-i18next": "^11.15.3",
     "react-native": "0.67.1",
+    "react-native-localize": "^2.1.9",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.10.2"
+    "react-native-screens": "^3.10.2",
+    "react-native-vector-icons": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
